# maestro

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  claude-code-prompt.md  maestro-commercial-viability.md  maestro-constraint-system-update.md  maestro-open-source-costs.md  meta-agent-concept-manifest (2).md  pyproject.toml  setup-instructions.md  tools.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: example_session.txt
maestro/: __init__.py  __main__.py  analyzer.py  cli.py  executor.py  generator.py  learner.py  models.py  negotiator.py  validator.py
tests/: test_analyzer.py  test_demo.py  test_generator.py  test_learner.py  test_models.py  test_negotiation_flow.py  test_validator.py
