[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maestro"
version = "0.1.0"
description = "Intelligent AI tool orchestration with constraint negotiation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Esteban Sanchez Pieper", email = "esteban.bkk@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
maestro = "maestro.cli:main"

[project.urls]
Homepage = "https://github.com/estebansanchez/maestro"
Repository = "https://github.com/estebansanchez/maestro"
Issues = "https://github.com/estebansanchez/maestro/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["maestro"]
omit = ["maestro/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
